--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -3,8 +3,8 @@ name: API CLI
 on:
   push:
     paths:
-      - 'api/**'
-      - '.github/workflows/api-ci.yml'
+      - "api/**"
+      - ".github/workflows/api-ci.yml"
 
 jobs:
   unit-testing:
@@ -30,4 +30,53 @@ jobs:
         run: npm ci
 
       - name: run unit tests
-        run: npm
+        run: npm run test 
+
+  linter: 
+        runs-on: macos-latest
+        steps:
+          - name: Checkout
+            uses: actions/checkout@v4
+
+          - name: Setup Node.jobs
+            uses: actions/setup-node@v4
+            with:
+              node-version: 20
+              cache: npm
+              cache-dependency-path: ./api/api/package-lock.json
+
+          - name: Install dependencies
+            shell: bash
+            run: npm ci
+
+          - name: run unit linter
+            run: npm run lint
+    
+  e2e:
+    runs-on: windows-latest
+    container: 
+      image: node:20
+
+    services:
+      mongo:
+        image: mongo:4.4
+        ports:
+          - 27018:27017
+        env:
+          MONGO_INITDB_ROOT_USERNAME: test
+          MONGO_INITDB_ROOT_PASSWORD: test123
+
+    steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+
+        - name: Install dependencies
+          shell: bash
+          run: npm ci
+
+        - name: run e2e 
+          run: npm run test:e2e
+
+          env:
+            MONGO_DB_NAME: demo
+            MONGO_URL: mongodb://test:test123@mongo-e2e:27017?retryWrites=true&writeConcern=majority
