--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -9,54 +9,48 @@ on:
 jobs:
   unit-testing:
     runs-on: windows-latest
-
     defaults:
       run:
         working-directory: api
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
           cache-dependency-path: api/package-lock.json
-
       - name: Install dependencies
         shell: bash
         run: npm ci
-
       - name: run unit tests
-        run: npm run test 
+        run: npm run test
 
-  linter: 
-        runs-on: macos-latest
-        steps:
-          - name: Checkout
-            uses: actions/checkout@v4
+  linter:
+    runs-on: macos-latest
+    defaults:
+      run:
+        working-directory: api
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: api/package-lock.json
+      - name: Install dependencies
+        shell: bash
+        run: npm ci
+      - name: run unit linter
+        run: npm run lint
 
-          - name: Setup Node.jobs
-            uses: actions/setup-node@v4
-            with:
-              node-version: 20
-              cache: npm
-              cache-dependency-path: ./api/api/package-lock.json
-
-          - name: Install dependencies
-            shell: bash
-            run: npm ci
-
-          - name: run unit linter
-            run: npm run lint
-    
   e2e:
     runs-on: windows-latest
-    container: 
+    container:
       image: node:20
-
     services:
       mongo:
         image: mongo:4.4
@@ -65,18 +59,14 @@ jobs:
         env:
           MONGO_INITDB_ROOT_USERNAME: test
           MONGO_INITDB_ROOT_PASSWORD: test123
-
     steps:
-        - name: Checkout
-          uses: actions/checkout@v4
-
-        - name: Install dependencies
-          shell: bash
-          run: npm ci
-
-        - name: run e2e 
-          run: npm run test:e2e
-
-          env:
-            MONGO_DB_NAME: demo
-            MONGO_URL: mongodb://test:test123@mongo-e2e:27017?retryWrites=true&writeConcern=majority
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        shell: bash
+        run: npm ci
+      - name: run e2e
+        run: npm run test:e2e
+        env:
+          MONGO_DB_NAME: demo
+          MONGO_URL: mongodb://test:test123@mongo:27017?retryWrites=true&writeConcern=majority
