--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm run test
 
   linter:
-    runs-on: macos-latest
+    runs-on: windows-latest
     defaults:
       run:
         working-directory: api
@@ -59,12 +59,15 @@ jobs:
         env:
           MONGO_INITDB_ROOT_USERNAME: test
           MONGO_INITDB_ROOT_PASSWORD: test123
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Install dependencies
         shell: bash
         run: npm ci
+
       - name: run e2e
         run: npm run test:e2e
         env:
