--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -1,3 +1,4 @@
+
 name: API CLI
 
 on:
@@ -15,6 +16,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -25,6 +27,7 @@ jobs:
         shell: bash
         run: npm ci
       - name: run unit tests
+        shell: bash
         run: npm run test
 
   linter:
@@ -35,6 +38,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -45,10 +49,11 @@ jobs:
         shell: bash
         run: npm ci
       - name: run unit linter
+        shell: bash
         run: npm run lint
 
   e2e:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     container:
       image: node:20
     services:
@@ -69,6 +74,7 @@ jobs:
         run: npm ci
 
       - name: run e2e
+        shell: bash
         run: npm run test:e2e
         env:
           MONGO_DB_NAME: demo
