--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -53,7 +53,7 @@ jobs:
         run: npm run lint
 
   e2e:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     container:
       image: node:20
     services:
